styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

html {
    font-family: Poppins, sans-serif;
    font-size: 20px;
    line-height: 1/5;
}

h1 {
    font-size: 4.5em;
    line-height: 1.2;
}

h2 {
    font-size: 2em;
}

h3 {
    font-size: 1.8em;
}

h4 {
    font-size: 1.4em;
}

h5 {
    font-size: 1.2em;
}

h6 {
    font-size: 1em;
}



.site-header {
    background-color: black;
    text-align: center;
    color: white;
    padding: 1em;
}

.help-section ul {
    display: flex;
    gap: 0.5em;
    justify-content: center;
    align-items: center;
}

li {
    list-style: none;
}

.icons-section {
    display: flex;
    justify-content: center;
    gap: 1.5em;
    margin: 1em 0 2.5em 0;
}

.hero-section-back {
    background-image: url('images/carousel-1.jpg');
    background-position: center;
    background-size: cover;
}

.hero-section {
    text-align: center;
    background-color: rgb(0 0 0 / 50%);
    color: white;
    border-bottom: 0.5em solid #AAACB2;

}

.hero-header {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: white;
    max-width: 70em;
    margin: auto;
    border-radius: 3em;
    position: relative;
    top: -2em;
    z-index: 10;
    color: black;
    padding: 0.2em 0.5em;
}

.hero-header ul {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-wrap: wrap;
}

.hero-header li {
    font-weight: bold;
}


.title {
    font-size: 2.5em;
    font-weight: bold;
    margin: 0 0.5em;
    color: #EB642F;
}

.title-word {
    color: black;
}

.hero-header ul>* {
    margin: 0 1em;
}

.hero-content {
    margin: auto;
    max-width: 47em;
    padding: 15em 0 20em 0;
}

.hero-content a {
    margin: 1.5em;
}

.features-section {
    background-color: #E2F2D0;
    display: flex;
    flex-direction: column;
    align-items: center;
    color: #555555;
    padding: 5em;
}

.line {
    background-color: black;
    height: 0.3em;
    width: 5em;
    margin-bottom: 0.5em;
}

.wrapper {
    display: flex;
    justify-content: center;
    max-width: 75em;
    gap: 1em;
    padding: 1em 2em;
}

.wrapper>* {
    flex: 1 1 30%;
    padding: 0 1em;
}

.media {
    padding: 0;
    background-image: url('images/about.jpg');
    background-size: cover;
    background-position: center;
    flex: 0 0 32%;
    border-radius: 0.3em;
}

.logos-section {
    margin: 0.5em 0 1.5em 0;
}

.logos-section i {
    color: #EB642F;
}

.logos-section i {
    text-align: center;
    border: 0.15em solid #B0E1F3;
    padding: 0.3em;
    border-radius: 50%;
    min-width: 2em;
}

.about-article,
.features-article {
    display: flex;
    flex-direction: column;
    gap: 1em;
    padding: 2em 1em;
}

.contacts-wrapper {
    display: flex;
    justify-content: center;
}

.contacts-wrapper>* {
    flex: 1 0 80%
}

.contacts-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 3em 0 0 0;
}

.contacts-article {
    padding: 0 1em 0.5em 1em;
}

.contacts-article p {
    color: #555555;
}

.left {
    text-align: right;
    border-right: 1px solid #2C2E30;
}


footer {
    text-align: center;
    color: #555555;
    margin: 1em 0 4em 0;
}

footer span {
    color: black;
}

.button {
    display: inline-block;
    width: fit-content;
    color: white;
    text-decoration: none;
    padding: 0.5em 1em;
    border-radius: 3em;
}

.button-black {
    background-color: black;
}

.button-orange {
    background-color: #EB642F;
}

.fa-check {
    color: #EB642F;
    margin-right: 0.5em;
}

a{
    text-decoration: inherit;
    color: inherit;
}

@media (max-width: 1200px) {
    .hero-section-back {
        background-position: left;
    }

    .hero-header {
        flex-direction: column;
    }

    .wrapper {
        flex-direction: column;
    }

    .media {
        min-height: 40em;
    }
}

@media (max-width: 600px) {
    html {
        font-size: 16px;
    }

    .site-header {
        padding: 0.5em;
    }


    .hero-section-back {
        background-position: left;
    }


    .help-section ul {
        flex-wrap: wrap;
    }

    .hero-header {
        top: 0;
        border-radius: 0;
        width: 100%;
        padding: 1em 0;
        flex-direction: column;
    }

    .hero-header ul {
        gap: 0.5em;
    }

    .hero-header ul>* {
        margin: 0;
    }

    .hero-content {
        padding: 10em 1em;
    }

    .hero-content h1 {
        font-size: 2.5em;
    }

    .wrapper {
        flex-direction: column;
        padding: 1em;
    }

    .media {
        min-height: 20em;
    }

    .features-section {
        padding: 2em 1em;
    }

    .contacts-wrapper {
        flex-direction: column;
        align-items: center;
        gap: 1em;
    }

    .left {
        text-align: center;
        border-right: none;
        border-bottom: 1px solid #2C2E30;
        padding-bottom: 1em;
    }

    .contacts-article {
        text-align: center;
        width: 100%;
    }
}

